[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/dashboard_panel.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/production_chart.gd" id="2"]

[node name="DashboardPanel" type="Control"]
anchors_preset = 8
anchor_bottom = 1.0
anchor_right = 1.0
visible = false
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 48
custom_constants/margin_right = 48
custom_constants/margin_top = 48
custom_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)

[node name="BadgeSummary" type="Label" parent="MarginContainer/VBoxContainer/Header"]
size_flags_horizontal = 3
text = "Badges earned: 0"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
text = "Close"

[node name="Body" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
size_flags_vertical = 3
custom_constants/separation = 16

[node name="ChartContainer" type="Panel" parent="MarginContainer/VBoxContainer/Body"]
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 280)

[node name="ProductionChart" type="Control" parent="MarginContainer/VBoxContainer/Body/ChartContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="Summary" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Body"]
size_flags_vertical = 1
text = ""
wrap_mode = 1

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
text = "Close"

